--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Main</title>
 </head>
-    <body>
+    <body id="WASD">
         <script type="module" src="/scene.js">init();</script> 
     </body>
 </html>
