--- a/src/html/contacts.html
+++ b/src/html/contacts.html
@@ -12,8 +12,8 @@
         <form action="/" method="POST">
             <label for="name">Command:</label>
             <div>
-                <input type="text" id="name" autocomplete="off" placeholder="                   put it here (-_-)" name="code" size="30" />
-                <button type="sumbit" for="name">SEND</button>
+                <input type="text" id="name" autocomplete="off" placeholder="                    put it here (-_-)" name="code" size="30" />
+                <button type="submit" for="name">SEND</button>
             </div>
         </form>
     </body>
