--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+<meta http-equiv="Pragma" content="no-cache" />
 <head>
     <title></title>
 </head>
@@ -8,10 +10,10 @@
             <div>
                 <a href="/src/html/contacts.html">to console</a> 
 
-                <a href="/main.html">to main</a>
+                <a href="/src/html/turtles/turtles.html">Connect to turtles</a>
             </div>
         </h1>
         
-        <img src="negr.jpg" />
+        <img src="/src/images/chelik.jpg" />
     </body>
 </html>
