--- a/index.html
+++ b/index.html
@@ -2,18 +2,17 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
 <meta http-equiv="Pragma" content="no-cache" />
+<link rel="stylesheet" href="/src/css/index.css">
 <head>
     <title></title>
 </head>
     <body>
         <h1>
             <div>
-                <a href="/src/html/contacts.html">to console</a> 
+                <button id="console" onclick='window.location.href="/src/html/contacts.html"'>to console</button> 
 
-                <a href="/src/html/turtles/turtles.html">Connect to turtles</a>
+                <button id="turtles" onclick='window.location.href="/src/html/turtles/turtles.html"'>Connect to turtles</button>
             </div>
         </h1>
-        
-        <img src="/src/images/chelik.jpg" />
     </body>
 </html>
