--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
         <meta charset="UTF-8">
         <title>Main</title>
         <link rel="stylesheet" href="/src/css/main.css">
+        <script src="/src/html/modules/ifvisible.min.js"></script>
     </head>
     
     <body id="WASD">
@@ -45,6 +46,9 @@
         <button class="placing" id="placeUp"></button>
         <button class="placing" id="place"></button>
         <button class="placing" id="placeDown"></button>
+        <button class="sucking" id="suckUp"></button>
+        <button class="sucking" id="suck"></button>
+        <button class="sucking" id="suckDown"></button>
 
         <script type="module" src="/scene.js">init();</script>
     </body>
