--- a/src/html/contacts.html
+++ b/src/html/contacts.html
@@ -9,7 +9,7 @@
     
 
     <body>
-        <form action="/" method="POST">
+        <form action="/exec" method="POST">
             <label for="name">Command:</label>
             <div>
                 <input type="text" id="name" autocomplete="off" placeholder="                    put it here (-_-)" name="code" size="30" />
